@@ -183,6 +183,9 @@ Jeskola Stereo Reverb (sometimes silences the whole song, NAN?)
 Sonic Verb (seems to work now)
   buzzmachinecallbacks.cpp:199:BuzzMachineCallbacks::GetEnvPoint (wave=-1,env=-1,i=-1076278224,&x,&y,&flags)
   buzzmachinecallbacks.cpp:276:BuzzMachineCallbacks::SetSequenceData (row=-1217504548,ppat=B7A5B3C4)
+Dolby Prologic Echo
+  Param Direction : val [1 ... d=4096/n=0 ... 255], the def-val for an enum, can't be outside the range
+  
 Ynzn's Remote Compressor.dll
 Ynzn's Remote Gate.dll
   both crash (problem with name?)
